Fix issues w/ scrollbars in the menu

--- a/public/css/icinga/layout.less
+++ b/public/css/icinga/layout.less
@@ -308,12 +308,15 @@ html.no-js .controls > .tabs {
     }
   }
 
+  #search {
+    padding-left: 3.75em;
+  }
+
   #search:focus {
     background-color: @menu-bg-color;
     border-radius: 0 .25em .25em 0;
     box-shadow: 0 0 .25em 0 rgba(0, 0, 0, .2);
     color: @menu-color;
-    padding-left: 3.75em;
     width: 20em;
     position: fixed;
     z-index: 1;
